--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ body {
   background-color: #fff;
   padding: 28px 28px 45px;
   border-radius: 6px;
+  overflow: hidden;
 }
 .container header {
   padding: 0px 23px 23px;
@@ -45,6 +46,7 @@ body {
   border-radius: 3px;
   font-size: 17px;
   outline: 1px solid var(--light-color);
+  
 }
 .search input:focus {
   padding: 4px 4px 4px 32px;
@@ -54,7 +56,8 @@ body {
   color: var(--primary-color);
 }
 .search-icon {
-  transform: translate(-363px, 10px);
+  transform: translate(-292px, 12px);
+  cursor: pointer;
 }
 .search input:focus ~ .search-icon {
   color: var(--bg-color);
@@ -77,14 +80,30 @@ body {
   /* padding to be removed */
   padding: 12px 0;
 }
+.info-text span {
+  font-weight: 500;
+}
 .container ul {
   /* display: none; */
+  height: 0;
+  width: 0;
+  opacity: 0;
+  transition: .5s ease-in;
+}
+.container.active .info-text{
+  display: none;
 }
 .container ul .word {
   display: flex;
   justify-content: space-between;
 }
-
+.container.active ul{
+  /* display: block; */
+  height: 303px;
+  width: 100%;
+  opacity: 1;
+  transition:all .5s ease-in;
+}
 .container ul li {
   list-style: none;
   margin-bottom: 14px;
@@ -114,6 +133,15 @@ ul li:last-child {
   border-left: 3px solid var(--bg-color);
   padding-left: 10px;
   border-radius: 4px 0 0 4px;
+}
+/* Create a scrollbar */
+ul .content{
+  max-height: 215px;
+  overflow-y: auto;
+}
+ul .content::-webkit-scrollbar{
+  width: 0px;
+
 }
 .details span {
   font-size: 14px;
